# qt_on_clion_test

./: CMakeLists.txt  main.cpp
